# shuttle-memes

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: main.rs
static/: style.css
templates/: home.html  index.html  meme.html
