[package]
name = "shuttle-memes"
version = "0.2.1"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.9"
shuttle-axum = { version = "0.52", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.52"
tokio = "1.28.2"
tower-http = { version = "0.6.2", features = ["fs"] }
